--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.12.2"
     }
 }
